--- a/frontend/download.html
+++ b/frontend/download.html
@@ -40,19 +40,19 @@
 								<a id="a-mb" class="nav-link" href=".">Home</a>
 							</li>
 							<li class="nav-item">
-								<a id="a-mb" class="nav-link" href="gioi-thieu.html" data-name="gioi-thieu" data-title="Giới thiệu" >Content</a>
+								<a id="a-mb" class="nav-link" href="about.html" data-name="gioi-thieu" data-title="Giới thiệu" >Content</a>
 							</li>
 							<li class="nav-item">
-								<a id="a-mb" class="nav-link" href="tin-tuc.html" data-name="tin-tuc" data-title="Tin tức" >News</a>
+								<a id="a-mb" class="nav-link" href="news.html" data-name="tin-tuc" data-title="Tin tức" >News</a>
 							</li>
 							<li class="nav-item">
 								<a id="a-mb" class="nav-link" href="download.html" data-name="download" data-title="Download" >Download</a>
 							</li>
 							<li class="nav-item">
-								<a id="a-mb" class="nav-link" href="lien-he.html" data-name="lien-he" data-title="Liên hệ" >Contact</a>
+								<a id="a-mb" class="nav-link" href="contact.html" data-name="lien-he" data-title="Liên hệ" >Contact</a>
 							</li>
 							<li>
-								<a href="https://secure.businessbnc.com/">Login</a>
+								<a href="../backend/login.html">Login</a>
 							</li>
 						</ul>
 					</nav>
@@ -86,10 +86,10 @@
 				                        	<a class="nav-link" href="index.html">Home</a>
 				                        </li>
 				                        <li class="nav-item">
-				                        	<a class="nav-link" href="gioi-thieu.html" title="Giới thiệu">Content</a>
+				                        	<a class="nav-link" href="about.html" title="Giới thiệu">Content</a>
 				                       	</li>
 				                        <li class="nav-item">
-				                        	<a class="nav-link" href="tin-tuc.html" title="Tin tức">News</a>
+				                        	<a class="nav-link" href="news.html" title="Tin tức">News</a>
 				                        </li>
 				                        <li class="nav-item">
 				                        	<a class="nav-link" href="download.html" title="Download">Download</a>
@@ -101,7 +101,7 @@
 				                </div>
 				            </div>
 				            <div class="login-member">
-				                <a href="https://secure.businessbnc.com/">Login</a>
+				                <a href="../backend/login.html">Login</a>
 				            </div>
 				            <div class="language">
 				                <a href="#"><img src="images/language/vn.png" alt="Language"></a>
@@ -153,10 +153,10 @@
 					        	<a href="index.html">Home</a>
 					        </li>
 					        <li>
-					        	<a href="gioi-thieu.html" title="Giới thiệu">Content</a>
+					        	<a href="about.html" title="Giới thiệu">Content</a>
 					        </li>
 					        <li>
-					        	<a href="tin-tuc.html" title="Tin tức">News</a>
+					        	<a href="news.html" title="Tin tức">News</a>
 					        </li>
 					        <li>
 					        	<a href="download.html" title="Download">Download</a>
