--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,19 +40,19 @@
 								<a id="a-mb" class="nav-link" href=".">Home</a>
 							</li>
 							<li class="nav-item">
-								<a id="a-mb" class="nav-link" href="gioi-thieu.html" data-name="gioi-thieu" data-title="Giới thiệu" >Content</a>
+								<a id="a-mb" class="nav-link" href="about.html" data-name="gioi-thieu" data-title="Giới thiệu" >Content</a>
 							</li>
 							<li class="nav-item">
-								<a id="a-mb" class="nav-link" href="tin-tuc.html" data-name="tin-tuc" data-title="Tin tức" >News</a>
+								<a id="a-mb" class="nav-link" href="news.html" data-name="tin-tuc" data-title="Tin tức" >News</a>
 							</li>
 							<li class="nav-item">
 								<a id="a-mb" class="nav-link" href="download.html" data-name="download" data-title="Download" >Download</a>
 							</li>
 							<li class="nav-item">
-								<a id="a-mb" class="nav-link" href="lien-he.html" data-name="lien-he" data-title="Liên hệ" >Contact</a>
+								<a id="a-mb" class="nav-link" href="contact.html" data-name="lien-he" data-title="Liên hệ" >Contact</a>
 							</li>
 							<li>
-								<a href="https://secure.businessbnc.com/">Login</a>
+								<a href="../backend/login.html">Login</a>
 							</li>
 						</ul>
 					</nav>
@@ -86,10 +86,10 @@
 				                        	<a class="nav-link" href="index.html">Home</a>
 				                        </li>
 				                        <li class="nav-item">
-				                        	<a class="nav-link" href="gioi-thieu.html" title="Giới thiệu">Content</a>
+				                        	<a class="nav-link" href="about.html" title="Giới thiệu">Content</a>
 				                       	</li>
 				                        <li class="nav-item">
-				                        	<a class="nav-link" href="tin-tuc.html" title="Tin tức">News</a>
+				                        	<a class="nav-link" href="news.html" title="Tin tức">News</a>
 				                        </li>
 				                        <li class="nav-item">
 				                        	<a class="nav-link" href="download.html" title="Download">Download</a>
@@ -101,7 +101,7 @@
 				                </div>
 				            </div>
 				            <div class="login-member">
-				                <a href="https://secure.businessbnc.com/">Login</a>
+				                <a href="../backend/login.html">Login</a>
 				            </div>
 				            <div class="language">
 				                <a href="#"><img src="images/language/vn.png" alt="Language"></a>
@@ -209,13 +209,13 @@
 							<li class="col-sm-6 col-xs-12 col-12 news-home">
 								<div class="row">
 								    <div class="col-xs-4">
-								        <a href="#" title="">
+								        <a href="news-detail.html" title="">
 								        	<img src="images/news/tin-tuc-01-1503650079.jpg" alt="INSTANT WITHDRAWALS">
 								        </a>
 								    </div>
 								    <div class="col-xs-8">
 								        <div class="row">
-								            <a href="#" title="">
+								            <a href="news-detail.html" title="">
 								                <h2>INSTANT WITHDRAWALS</h2>
 								            </a>
 								            <p>Withdrawal requests are processed instantly 24/7. Investors may make unlimited amount of requests per day. There is no fee for withdrawals of hourly interest.</p>
@@ -226,13 +226,13 @@
 							<li class="col-sm-6 col-xs-12 col-12 news-home">
 							    <div class="row">
 							        <div class="col-xs-4">
-							            <a href="#" title="">
+							            <a href="news-detail.html" title="">
 							            	<img src="images/news/news-2-1503650198.jpg" title="AUTOMATIC INTEREST">
 							            </a>
 							        </div>
 							        <div class="col-xs-8">
 							            <div class="row">
-							                <a href="#" title="">
+							                <a href="news-detail.html" title="">
 							                    <h2>AUTOMATIC INTEREST</h2>
 							                </a>
 							                <p>Investor’s hourly profit will be added to account balance automatically. Investors can withdraw money instantly every hour.</p>
@@ -243,13 +243,13 @@
 							<li class="col-sm-6 col-xs-12 col-12 news-home">
 						 		<div class="row">
 						 			<div class="col-xs-4">
-						 				<a href="#" title="">
+						 				<a href="news-detail.html" title="">
 								        	<img src="images/news/news-3-1503650250.jpg" alt="INSTANT WITHDRAWALS">
 								        </a>
 						 			</div>
 						 			<div class="col-xs-8">
 						 				<div class="row">
-						 					<a href="#" title="">
+						 					<a href="news-detail.html" title="">
 						 						<h2>DEPOSIT BACK ANYTIME</h2>
 						 					</a>
 						 					<p>Investors may withdraw their initial deposit at any time after 24 hours since depositing. There is a 5% transaction fee for service maintenance.</p>
@@ -260,13 +260,13 @@
 						 	<li class="col-sm-6 col-xs-12 col-12 news-home">
 							    <div class="row">
 							        <div class="col-xs-4">
-							            <a href="#" title="">
+							            <a href="news-detail.html" title="">
 								        	<img src="images/news/news-4-1503650285.jpg" alt="INSTANT WITHDRAWALS">
 								        </a>
 							        </div>
 							        <div class="col-xs-8">
 							            <div class="row">
-							                <a href="#" title="">
+							                <a href="news-detail.html" title="">
 							                    <h2>BANK LEVEL SECURITY</h2>
 							                </a>
 							                <p>This program is secured with EV SSL, which guarantees insurance to all transactions and encrypts all information provided. The highest DDOS protection is provided by DDOS-Guard!</p>
@@ -282,16 +282,16 @@
 				<div class="container">
 					<div class="block-content">
 						<ul  class="owl-carousel owl-theme dotsData" data-nav="false" data-dots="true" data-margin="30" data-responsive='{"0":{"items":1},"480":{"items":2},"600":{"items":2},"768":{"items":3},"800":{"items":3},"992":{"items":6}}'>
-							<li class="item"><img src="images/comment/partner-01-1503650703.jpg" alt="brand1"></li>
-							<li class="item"><img src="images/comment/partner-02-1503650709.jpg" alt="brand2"></li>
-							<li class="item"><img src="images/comment/partner-03-1503650715.jpg" alt="brand3"></li>
-							<li class="item"><img src="images/comment/partner-04-1503650721.jpg" alt="brand4"></li>
-							<li class="item"><img src="images/comment/partner-05-1503650731.jpg" alt="brand5"></li>
-							<li class="item"><img src="images/comment/partner-01-1503650703.jpg" alt="brand6"></li>
-							<li class="item"><img src="images/comment/partner-02-1503650709.jpg" alt="brand7"></li>
-							<li class="item"><img src="images/comment/partner-03-1503650715.jpg" alt="brand8"></li>
-							<li class="item"><img src="images/comment/partner-04-1503650721.jpg" alt="brand9"></li>
-							<li class="item"><img src="images/comment/partner-05-1503650731.jpg" alt="brand10"></li>
+							<li class="item"><img src="images/comment/partner-01-1503650703.jpg" alt="partner1"></li>
+							<li class="item"><img src="images/comment/partner-02-1503650709.jpg" alt="partner2"></li>
+							<li class="item"><img src="images/comment/partner-03-1503650715.jpg" alt="partner3"></li>
+							<li class="item"><img src="images/comment/partner-04-1503650721.jpg" alt="partner4"></li>
+							<li class="item"><img src="images/comment/partner-05-1503650731.jpg" alt="partner5"></li>
+							<li class="item"><img src="images/comment/partner-01-1503650703.jpg" alt="partner6"></li>
+							<li class="item"><img src="images/comment/partner-02-1503650709.jpg" alt="partner7"></li>
+							<li class="item"><img src="images/comment/partner-03-1503650715.jpg" alt="partner8"></li>
+							<li class="item"><img src="images/comment/partner-04-1503650721.jpg" alt="partner9"></li>
+							<li class="item"><img src="images/comment/partner-05-1503650731.jpg" alt="partner10"></li>
 						</ul>
 					</div>
 				</div>
@@ -307,10 +307,10 @@
 					        	<a href="index.html">Home</a>
 					        </li>
 					        <li>
-					        	<a href="gioi-thieu.html" title="Giới thiệu">Content</a>
+					        	<a href="about.html" title="Giới thiệu">Content</a>
 					        </li>
 					        <li>
-					        	<a href="tin-tuc.html" title="Tin tức">News</a>
+					        	<a href="news.html" title="Tin tức">News</a>
 					        </li>
 					        <li>
 					        	<a href="download.html" title="Download">Download</a>
