--- a/frontend/news-detail.html
+++ b/frontend/news-detail.html
@@ -10,7 +10,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
-	<title>Tin Tức</title>
+	<title>Chi Tiết Tin Tức</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="robots" content="index,follow" />
@@ -40,19 +40,19 @@
 								<a id="a-mb" class="nav-link" href=".">Home</a>
 							</li>
 							<li class="nav-item">
-								<a id="a-mb" class="nav-link" href="gioi-thieu.html" data-name="gioi-thieu" data-title="Giới thiệu" >Content</a>
+								<a id="a-mb" class="nav-link" href="about.html" data-name="gioi-thieu" data-title="Giới thiệu" >Content</a>
 							</li>
 							<li class="nav-item">
-								<a id="a-mb" class="nav-link" href="tin-tuc.html" data-name="tin-tuc" data-title="Tin tức" >News</a>
+								<a id="a-mb" class="nav-link" href="news.html" data-name="tin-tuc" data-title="Tin tức" >News</a>
 							</li>
 							<li class="nav-item">
 								<a id="a-mb" class="nav-link" href="download.html" data-name="download" data-title="Download" >Download</a>
 							</li>
 							<li class="nav-item">
-								<a id="a-mb" class="nav-link" href="lien-he.html" data-name="lien-he" data-title="Liên hệ" >Contact</a>
+								<a id="a-mb" class="nav-link" href="contact.html" data-name="lien-he" data-title="Liên hệ" >Contact</a>
 							</li>
 							<li>
-								<a href="https://secure.businessbnc.com/">Login</a>
+								<a href="../backend/login.html">Login</a>
 							</li>
 						</ul>
 					</nav>
@@ -86,10 +86,10 @@
 				                        	<a class="nav-link" href="index.html">Home</a>
 				                        </li>
 				                        <li class="nav-item">
-				                        	<a class="nav-link" href="gioi-thieu.html" title="Giới thiệu">Content</a>
+				                        	<a class="nav-link" href="about.html" title="Giới thiệu">Content</a>
 				                       	</li>
 				                        <li class="nav-item">
-				                        	<a class="nav-link" href="tin-tuc.html" title="Tin tức">News</a>
+				                        	<a class="nav-link" href="news.html" title="Tin tức">News</a>
 				                        </li>
 				                        <li class="nav-item">
 				                        	<a class="nav-link" href="download.html" title="Download">Download</a>
@@ -101,7 +101,7 @@
 				                </div>
 				            </div>
 				            <div class="login-member">
-				                <a href="https://secure.businessbnc.com/">Login</a>
+				                <a href="../backend/login.html">Login</a>
 				            </div>
 				            <div class="language">
 				                <a href="#"><img src="images/language/vn.png" alt="Language"></a>
@@ -114,79 +114,10 @@
 
 		<section id="main">
 			<section class="block-page-news">
-				<div class="block-news wow fadeInUp">
+				<div class="block-news-detail">
 					<div class="container">
 						<div class="row">
-							<ul>
-								<li class="col-sm-6 col-xs-12 col-12 news-home">
-									<div class="row">
-									    <div class="col-xs-4">
-									        <a href="#" title="">
-									        	<img src="images/news/tin-tuc-01-1503650079.jpg" alt="INSTANT WITHDRAWALS">
-									        </a>
-									    </div>
-									    <div class="col-xs-8">
-									        <div class="row">
-									            <a href="#" title="">
-									                <h2>INSTANT WITHDRAWALS</h2>
-									            </a>
-									            <p>Withdrawal requests are processed instantly 24/7. Investors may make unlimited amount of requests per day. There is no fee for withdrawals of hourly interest.</p>
-									        </div>
-									    </div>
-									</div>
-								</li><!-- /.news-home -->
-								<li class="col-sm-6 col-xs-12 col-12 news-home">
-								    <div class="row">
-								        <div class="col-xs-4">
-								            <a href="#" title="">
-								            	<img src="images/news/news-2-1503650198.jpg" title="AUTOMATIC INTEREST">
-								            </a>
-								        </div>
-								        <div class="col-xs-8">
-								            <div class="row">
-								                <a href="#" title="">
-								                    <h2>AUTOMATIC INTEREST</h2>
-								                </a>
-								                <p>Investor’s hourly profit will be added to account balance automatically. Investors can withdraw money instantly every hour.</p>
-								            </div>
-								        </div>
-								    </div>
-								</li><!-- /.news-home -->
-								<li class="col-sm-6 col-xs-12 col-12 news-home">
-							 		<div class="row">
-							 			<div class="col-xs-4">
-							 				<a href="#" title="">
-									        	<img src="images/news/news-3-1503650250.jpg" alt="INSTANT WITHDRAWALS">
-									        </a>
-							 			</div>
-							 			<div class="col-xs-8">
-							 				<div class="row">
-							 					<a href="#" title="">
-							 						<h2>DEPOSIT BACK ANYTIME</h2>
-							 					</a>
-							 					<p>Investors may withdraw their initial deposit at any time after 24 hours since depositing. There is a 5% transaction fee for service maintenance.</p>
-							 				</div>
-							 			</div>
-							 		</div>
-							 	</li><!-- /.news-home -->
-							 	<li class="col-sm-6 col-xs-12 col-12 news-home">
-								    <div class="row">
-								        <div class="col-xs-4">
-								            <a href="#" title="">
-									        	<img src="images/news/news-4-1503650285.jpg" alt="INSTANT WITHDRAWALS">
-									        </a>
-								        </div>
-								        <div class="col-xs-8">
-								            <div class="row">
-								                <a href="#" title="">
-								                    <h2>BANK LEVEL SECURITY</h2>
-								                </a>
-								                <p>This program is secured with EV SSL, which guarantees insurance to all transactions and encrypts all information provided. The highest DDOS protection is provided by DDOS-Guard!</p>
-								            </div>
-								        </div>
-								    </div>
-								</li><!-- /.news-home -->
-							</ul>
+							<h2>INSTANT WITHDRAWALS</h2>
 						</div>
 					</div>
 				</div><!-- /.block-news -->
@@ -203,10 +134,10 @@
 					        	<a href="index.html">Home</a>
 					        </li>
 					        <li>
-					        	<a href="gioi-thieu.html" title="Giới thiệu">Content</a>
+					        	<a href="about.html" title="Giới thiệu">Content</a>
 					        </li>
 					        <li>
-					        	<a href="tin-tuc.html" title="Tin tức">News</a>
+					        	<a href="news.html" title="Tin tức">News</a>
 					        </li>
 					        <li>
 					        	<a href="download.html" title="Download">Download</a>
