--- a/frontend/news.html
+++ b/frontend/news.html
@@ -10,7 +10,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
-	<title>Giới Thiệu</title>
+	<title>Tin Tức</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="robots" content="index,follow" />
@@ -34,25 +34,25 @@
 		<header id="header">
 				<div class="block-header-mobile">
 				    <a class="mmmenua" href="#menu"><i class="fa fa-bars" aria-hidden="true"></i></a>
-				    <nav id="menu">
+				     <nav id="menu">
 						<ul class="navAjax" data-active="active" data-e="li">
 							<li class="nav-item">
 								<a id="a-mb" class="nav-link" href=".">Home</a>
 							</li>
 							<li class="nav-item">
-								<a id="a-mb" class="nav-link" href="gioi-thieu.html" data-name="gioi-thieu" data-title="Giới thiệu" >Content</a>
+								<a id="a-mb" class="nav-link" href="about.html" data-name="gioi-thieu" data-title="Giới thiệu" >Content</a>
 							</li>
 							<li class="nav-item">
-								<a id="a-mb" class="nav-link" href="tin-tuc.html" data-name="tin-tuc" data-title="Tin tức" >News</a>
+								<a id="a-mb" class="nav-link" href="news.html" data-name="tin-tuc" data-title="Tin tức" >News</a>
 							</li>
 							<li class="nav-item">
 								<a id="a-mb" class="nav-link" href="download.html" data-name="download" data-title="Download" >Download</a>
 							</li>
 							<li class="nav-item">
-								<a id="a-mb" class="nav-link" href="lien-he.html" data-name="lien-he" data-title="Liên hệ" >Contact</a>
+								<a id="a-mb" class="nav-link" href="contact.html" data-name="lien-he" data-title="Liên hệ" >Contact</a>
 							</li>
 							<li>
-								<a href="https://secure.businessbnc.com/">Login</a>
+								<a href="../backend/login.html">Login</a>
 							</li>
 						</ul>
 					</nav>
@@ -86,10 +86,10 @@
 				                        	<a class="nav-link" href="index.html">Home</a>
 				                        </li>
 				                        <li class="nav-item">
-				                        	<a class="nav-link" href="gioi-thieu.html" title="Giới thiệu">Content</a>
+				                        	<a class="nav-link" href="about.html" title="Giới thiệu">Content</a>
 				                       	</li>
 				                        <li class="nav-item">
-				                        	<a class="nav-link" href="tin-tuc.html" title="Tin tức">News</a>
+				                        	<a class="nav-link" href="news.html" title="Tin tức">News</a>
 				                        </li>
 				                        <li class="nav-item">
 				                        	<a class="nav-link" href="download.html" title="Download">Download</a>
@@ -101,7 +101,7 @@
 				                </div>
 				            </div>
 				            <div class="login-member">
-				                <a href="https://secure.businessbnc.com/">Login</a>
+				                <a href="../backend/login.html">Login</a>
 				            </div>
 				            <div class="language">
 				                <a href="#"><img src="images/language/vn.png" alt="Language"></a>
@@ -113,24 +113,85 @@
 		</header><!-- /#header -->
 
 		<section id="main">
-			<section class="block-page-about">
-				<div class="container">
-					<p>BEC coin is a leading provider of online foreign exchange (BEC ) trading, CFD trading, spread betting and related services. Our mission is to inspire global traders with access to the world's largest and most liquid market. By offering the most innovative trading tools, hiring the best trading educators, and meeting strict financial standards to protect trader funds, we strive for the best online trading experience in the market.a</p>
-					<p>With a lot of employees, we are in many countries and are regulated across four entities.</p>
-					<p>We have 15 years of award-winning BEC trading services.<br>
-					Our No Dealing Desk (NDD) execution model is competitive, transparent and fair.</p>
-					<p>At BEC, we are dedicated to serving our clients responsibly with the latest innovations in BEC tools and resources to assist you in trading. Below we underline the active promotions, bonuses and special offers available to traders. To take advantage of one of the offers listed below, simply register for an account, if you do not have one yet open with <strong>BEC</strong>, and contact your account manager for more information .</p>
-					<p><strong>Here’s how BECTrading with BEC will enhance your trading experience:</strong></p>
-					<ul>
-						<li>Best-in-class customer service, including live chat</li>
-						<li>One-hour response time for sales and support requests</li>
-						<li>Multiple asset trading and ECN accounts on MT4</li>
-						<li>Superior quality of execution (speed and reliability)</li>
-						<li>Deep liquidity from Tier-1 banks</li>
-						<li>Islamic (Swap Free) accounts</li>
-					</ul>
-				</div>
+			<section class="block-page-news">
+				<div class="block-news wow fadeInUp">
+					<div class="container">
+						<div class="row">
+							<ul>
+								<li class="col-sm-6 col-xs-12 col-12 news-home">
+									<div class="row">
+									    <div class="col-xs-4">
+									        <a href="news-detail.html" title="">
+									        	<img src="images/news/tin-tuc-01-1503650079.jpg" alt="INSTANT WITHDRAWALS">
+									        </a>
+									    </div>
+									    <div class="col-xs-8">
+									        <div class="row">
+									            <a href="#" title="">
+									                <h2>INSTANT WITHDRAWALS</h2>
+									            </a>
+									            <p>Withdrawal requests are processed instantly 24/7. Investors may make unlimited amount of requests per day. There is no fee for withdrawals of hourly interest.</p>
+									        </div>
+									    </div>
+									</div>
+								</li><!-- /.news-home -->
+								<li class="col-sm-6 col-xs-12 col-12 news-home">
+								    <div class="row">
+								        <div class="col-xs-4">
+								            <a href="news-detail.html" title="">
+								            	<img src="images/news/news-2-1503650198.jpg" title="AUTOMATIC INTEREST">
+								            </a>
+								        </div>
+								        <div class="col-xs-8">
+								            <div class="row">
+								                <a href="#" title="">
+								                    <h2>AUTOMATIC INTEREST</h2>
+								                </a>
+								                <p>Investor’s hourly profit will be added to account balance automatically. Investors can withdraw money instantly every hour.</p>
+								            </div>
+								        </div>
+								    </div>
+								</li><!-- /.news-home -->
+								<li class="col-sm-6 col-xs-12 col-12 news-home">
+							 		<div class="row">
+							 			<div class="col-xs-4">
+							 				<a href="news-detail.html" title="">
+									        	<img src="images/news/news-3-1503650250.jpg" alt="INSTANT WITHDRAWALS">
+									        </a>
+							 			</div>
+							 			<div class="col-xs-8">
+							 				<div class="row">
+							 					<a href="news-detail.html" title="">
+							 						<h2>DEPOSIT BACK ANYTIME</h2>
+							 					</a>
+							 					<p>Investors may withdraw their initial deposit at any time after 24 hours since depositing. There is a 5% transaction fee for service maintenance.</p>
+							 				</div>
+							 			</div>
+							 		</div>
+							 	</li><!-- /.news-home -->
+							 	<li class="col-sm-6 col-xs-12 col-12 news-home">
+								    <div class="row">
+								        <div class="col-xs-4">
+								            <a href="#" title="">
+									        	<img src="images/news/news-4-1503650285.jpg" alt="INSTANT WITHDRAWALS">
+									        </a>
+								        </div>
+								        <div class="col-xs-8">
+								            <div class="row">
+								                <a href="#" title="">
+								                    <h2>BANK LEVEL SECURITY</h2>
+								                </a>
+								                <p>This program is secured with EV SSL, which guarantees insurance to all transactions and encrypts all information provided. The highest DDOS protection is provided by DDOS-Guard!</p>
+								            </div>
+								        </div>
+								    </div>
+								</li><!-- /.news-home -->
+							</ul>
+						</div>
+					</div>
+				</div><!-- /.block-news -->
 			</section>
+			
 		</section><!-- /#main -->
 
 		<footer id="footer" class="wow fadeInUp">
@@ -142,10 +203,10 @@
 					        	<a href="index.html">Home</a>
 					        </li>
 					        <li>
-					        	<a href="gioi-thieu.html" title="Giới thiệu">Content</a>
+					        	<a href="about.html" title="Giới thiệu">Content</a>
 					        </li>
 					        <li>
-					        	<a href="tin-tuc.html" title="Tin tức">News</a>
+					        	<a href="news.html" title="Tin tức">News</a>
 					        </li>
 					        <li>
 					        	<a href="download.html" title="Download">Download</a>
