--- a/backend/change-info.html
+++ b/backend/change-info.html
@@ -83,74 +83,74 @@
             <aside class="main-sidebar">
                 <section class="sidebar">
                     <ul class="sidebar-menu block-menu" data-widget="tree">
-                        <li class="treeview active">
+                        <li>
                             <a href="index.html">
                                 <i class="fa fa-dashboard text-menu-cus"></i>
                                 <span>Dashboard</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li>
                             <a href="member.html">
                                 <i class="fa fa-sitemap text-menu-cus"></i>
                                 <span>Member</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li>
                             <a href="transaction.html">
                                 <i class="fa fa-exchange text-menu-cus"></i>
                                 <span>Transaction</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li class="active">
                             <a href="change-info.html">
                                 <i class="fa fa-user text-menu-cus"></i>
                                 <span>Change info</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li>
                             <a href="deposit.html">
                                 <i class="fa fa-money text-menu-cus"></i>
                                 <span>Deposit</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li>
                             <a href="transaction-history.html">
                                 <i class="fa fa-history text-menu-cus"></i>
                                 <span>Transaction history</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li>
                             <a href="upgrade-package.html">
                                 <i class="fa fa-external-link-square text-menu-cus"></i>
                                 <span>Upgrade package</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new treeview_new_top">
+                        <li class="treeview_new treeview_new_top">
                             <a class="center-text-cus ">
                                 <span>JUNIOR MANAGER</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new">
+                        <li class="treeview_new">
                             <a class="center-text-cus ">
                                 <span>MANAGER</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new">
+                        <li class="treeview_new">
                             <a class="center-text-cus ">
                                 <span>DIRECTOR</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new">
+                        <li class="treeview_new">
                             <a class="center-text-cus ">
                                 <span>MANAGING DIRECTOR</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new">
+                        <li class="treeview_new">
                             <a class="center-text-cus ">
                                 <span>SHAREHOLDER</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new">
+                        <li class="treeview_new">
                             <a class="center-text-cus ">
                                 <span>MANAGEMENT COUNCIL</span>
                             </a>
