--- a/backend/transaction.html
+++ b/backend/transaction.html
@@ -83,74 +83,74 @@
             <aside class="main-sidebar">
                 <section class="sidebar">
                     <ul class="sidebar-menu block-menu" data-widget="tree">
-                        <li class="treeview active">
+                        <li>
                             <a href="index.html">
                                 <i class="fa fa-dashboard text-menu-cus"></i>
                                 <span>Dashboard</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li>
                             <a href="member.html">
                                 <i class="fa fa-sitemap text-menu-cus"></i>
                                 <span>Member</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li class="active">
                             <a href="transaction.html">
                                 <i class="fa fa-exchange text-menu-cus"></i>
                                 <span>Transaction</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li>
                             <a href="change-info.html">
                                 <i class="fa fa-user text-menu-cus"></i>
                                 <span>Change info</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li>
                             <a href="deposit.html">
                                 <i class="fa fa-money text-menu-cus"></i>
                                 <span>Deposit</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li>
                             <a href="transaction-history.html">
                                 <i class="fa fa-history text-menu-cus"></i>
                                 <span>Transaction history</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li>
                             <a href="upgrade-package.html">
                                 <i class="fa fa-external-link-square text-menu-cus"></i>
                                 <span>Upgrade package</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new treeview_new_top">
+                        <li class="treeview_new treeview_new_top">
                             <a class="center-text-cus ">
                                 <span>JUNIOR MANAGER</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new">
+                        <li class="treeview_new">
                             <a class="center-text-cus ">
                                 <span>MANAGER</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new">
+                        <li class="treeview_new">
                             <a class="center-text-cus ">
                                 <span>DIRECTOR</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new">
+                        <li class="treeview_new">
                             <a class="center-text-cus ">
                                 <span>MANAGING DIRECTOR</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new">
+                        <li class="treeview_new">
                             <a class="center-text-cus ">
                                 <span>SHAREHOLDER</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new">
+                        <li class="treeview_new">
                             <a class="center-text-cus ">
                                 <span>MANAGEMENT COUNCIL</span>
                             </a>
@@ -304,7 +304,7 @@
                                             </form><!-- /.form-horizontal -->
                                         </div>
                                         <div class="col-sm-6">
-                                            <div class="chart" id="revenue-chart" style="position: relative; height: 400px; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
+                                            <div class="chart" id="revenue-chart">
                                                 <svg height="400" version="1.1" width="505" xmlns="http://www.w3.org/2000/svg" style="overflow: hidden; position: relative; left: -0.5px;">
                                                     <desc style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Created with Raphaël 2.1.0</desc>
                                                     <defs style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></defs>
@@ -436,13 +436,13 @@
                                                     <circle cx="480" cy="132.6325" r="4" fill="#ff5722" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle>
                                                     <circle cx="480" cy="132.6325" r="4" fill="#ff5722" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle>
                                                 </svg>
-                                                <div class="morris-hover morris-default-style" style="left: 63.8398px; top: 225px; display: none;">
+                                                <div class="morris-hover morris-default-style">
                                                     <div class="morris-hover-row-label">2017-01-10</div>
-                                                    <div class="morris-hover-point" style="color: #ff5722">
+                                                    <div class="morris-hover-point morris-hover-point-sell">
                                                         Sell: :
                                                         0.048
                                                     </div>
-                                                    <div class="morris-hover-point" style="color: #2196f3">
+                                                    <div class="morris-hover-point morris-hover-point-buy">
                                                         Buy: :
                                                         0.05
                                                     </div>
