--- a/backend/member.html
+++ b/backend/member.html
@@ -83,74 +83,74 @@
             <aside class="main-sidebar">
                 <section class="sidebar">
                     <ul class="sidebar-menu block-menu" data-widget="tree">
-                        <li class="treeview active">
+                        <li>
                             <a href="index.html">
                                 <i class="fa fa-dashboard text-menu-cus"></i>
                                 <span>Dashboard</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li class="active">
                             <a href="member.html">
                                 <i class="fa fa-sitemap text-menu-cus"></i>
                                 <span>Member</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li>
                             <a href="transaction.html">
                                 <i class="fa fa-exchange text-menu-cus"></i>
                                 <span>Transaction</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li>
                             <a href="change-info.html">
                                 <i class="fa fa-user text-menu-cus"></i>
                                 <span>Change info</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li>
                             <a href="deposit.html">
                                 <i class="fa fa-money text-menu-cus"></i>
                                 <span>Deposit</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li>
                             <a href="transaction-history.html">
                                 <i class="fa fa-history text-menu-cus"></i>
                                 <span>Transaction history</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <li>
                             <a href="upgrade-package.html">
                                 <i class="fa fa-external-link-square text-menu-cus"></i>
                                 <span>Upgrade package</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new treeview_new_top">
+                        <li class="treeview_new treeview_new_top">
                             <a class="center-text-cus ">
                                 <span>JUNIOR MANAGER</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new">
+                        <li class="treeview_new">
                             <a class="center-text-cus ">
                                 <span>MANAGER</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new">
+                        <li class="treeview_new">
                             <a class="center-text-cus ">
                                 <span>DIRECTOR</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new">
+                        <li class="treeview_new">
                             <a class="center-text-cus ">
                                 <span>MANAGING DIRECTOR</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new">
+                        <li class="treeview_new">
                             <a class="center-text-cus ">
                                 <span>SHAREHOLDER</span>
                             </a>
                         </li>
-                        <li class="treeview treeview_new">
+                        <li class="treeview_new">
                             <a class="center-text-cus ">
                                 <span>MANAGEMENT COUNCIL</span>
                             </a>
@@ -221,12 +221,92 @@
                                             </a>
                                             <ul class="block-addmemer clearfix">
                                                 <li class="block-modal-addMember">
-                                                    <a href="#" title="" data-toggle="modal" data-target="#AddTree">
-                                                        <div class="AddTree">
-                                                            <img src="dist/img/addavatar.png">
-                                                            <div class="name-npp-new"></div>
+                                                    <a href="#" title="" class="block-member">
+                                                        <div class="block-garpMain">
+                                                            <div class="img-level2">
+                                                                <img src="dist/img/10000.png">
+                                                                <div class="img-npp">ĐẶNG NGỌC DUYỆN</div>
+                                                                <div class="name-npp">1000</div>
+                                                            </div>
+                                                            <div class="block-quickTool">
+                                                                <div class="ShowDetailAccHome">
+                                                                    <div class="titleAcc Member">Member information</div>
+                                                                    <div class="bodyAcc">
+                                                                        <span>
+                                                                            <strong>Name :</strong>
+                                                                            <strong>ĐẶNG NGỌC DUYỆN</strong>
+                                                                        </span>
+                                                                            <span>
+                                                                            <strong>My Package :</strong>
+                                                                            <strong>Premium Trader</strong>
+                                                                        </span>
+                                                                        <span>
+                                                                            <strong>Left - Right:</strong> 
+                                                                            <strong>$0:$0</strong>
+                                                                        </span>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
                                                         </div>
                                                     </a>
+                                                    <ul class="block-addmemer clearfix">
+                                                        <li class="block-modal-addMember">
+                                                            <a href="#" title="" class="block-member">
+                                                                <div class="block-garpMain">
+                                                                    <div class="img-level2">
+                                                                        <img src="dist/img/10000.png">
+                                                                        <div class="img-npp">ĐẶNG NGỌC DUYỆN</div>
+                                                                        <div class="name-npp">1000</div>
+                                                                    </div>
+                                                                    <div class="block-quickTool">
+                                                                        <div class="ShowDetailAccHome">
+                                                                            <div class="titleAcc Member">Member information</div>
+                                                                            <div class="bodyAcc">
+                                                                                <span>
+                                                                                    <strong>Name :</strong>
+                                                                                    <strong>ĐẶNG NGỌC DUYỆN</strong>
+                                                                                </span>
+                                                                                    <span>
+                                                                                    <strong>My Package :</strong>
+                                                                                    <strong>Premium Trader</strong>
+                                                                                </span>
+                                                                                <span>
+                                                                                    <strong>Left - Right:</strong> 
+                                                                                    <strong>$0:$0</strong>
+                                                                                </span>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </a>
+                                                            <ul class="block-addmemer clearfix">
+                                                                <li class="block-modal-addMember">
+                                                                    <a href="#" title="" data-toggle="modal" data-target="#AddTree">
+                                                                        <div class="AddTree">
+                                                                            <img src="dist/img/addavatar.png">
+                                                                            <div class="name-npp-new"></div>
+                                                                        </div>
+                                                                    </a>
+                                                                </li>
+                                                                <li class="block-modal-addMember">
+                                                                    <a href="#" title="">
+                                                                        <div class="AddTree">
+                                                                            <img src="dist/img/addavatar.png">
+                                                                            <div class="name-npp-new"></div>
+                                                                        </div>
+                                                                    </a>
+                                                                </li>
+                                                            </ul>
+                                                        </li>
+                                                        <li class="block-modal-addMember">
+                                                            <a href="#" title="">
+                                                                <div class="AddTree">
+                                                                    <img src="dist/img/addavatar.png">
+                                                                    <div class="name-npp-new"></div>
+                                                                </div>
+                                                            </a>
+                                                        </li>
+                                                    </ul>
                                                 </li>
                                                 <li class="block-modal-addMember">
                                                     <a href="#" title="">
