--- a/backend/transaction-history.html
+++ b/backend/transaction-history.html
@@ -163,9 +163,9 @@
                 <section class="content">
                     <div class="account_right" id="account_right">
                         <ul class="nav nav-tabs ui-sortable-handle">
-                            <li class="active><a href="#CashLive" data-toggle="tab" aria-expanded="true"> <i class="fa fa-money"></i> Commission</a></li>
-                            <li"><a href="#CashCouple" data-toggle="tab" aria-expanded="false"> <i class="fa fa-money"></i> Money balance pair</a></li>
-                            <li class=""><a href="#CashRank" data-toggle="tab" aria-expanded="false"> <i class="fa fa-money"></i> Money title</a></li>
+                            <li class="active"><a href="#CashLive" data-toggle="tab" aria-expanded="true"> <i class="fa fa-money"></i> Commission</a></li>
+                            <li><a href="#CashCouple" data-toggle="tab" aria-expanded="false"> <i class="fa fa-money"></i> Money balance pair</a></li>
+                            <li><a href="#CashRank" data-toggle="tab" aria-expanded="false"> <i class="fa fa-money"></i> Money title</a></li>
                         </ul>
                         <div class="tab-content no-padding">
                             <div class="box box-primary tab-pane active" id="CashLive">
